--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -10,7 +10,7 @@
 	<h4>Contact</h4>
 	School of Informatics, IF 3.32 <br/>
 	University of Edinburgh <br/>
-	Email: <a href="c.vania@ed.ac.uk">f.lastname(at)ed.ac.uk</a><br/>
+	Email: f.lastname(at)ed.ac.uk <br/>
 	Github: <a href="https://github.com/claravania">claravania</a>
   </div>
 </div>
