--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -10,8 +10,9 @@
 	<h4>Contact</h4>
 	School of Informatics, IF 3.32 <br/>
 	University of Edinburgh <br/>
-	Email: f.lastname(at)ed.ac.uk <br/>
-	Github: <a href="https://github.com/claravania">claravania</a>
+	f.lastname(at)ed.ac.uk <br/>
+	<a href="https://github.com/claravania">Github</a>
+	<a href="https://www.linkedin.com/in/claravania/">LinkedIn</a>
   </div>
 </div>
 <div class="row-fluid spacer">
