--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -11,7 +11,7 @@
 	School of Informatics, IF 3.32 <br/>
 	University of Edinburgh <br/>
 	f.lastname(at)ed.ac.uk <br/>
-	<a href="https://github.com/claravania">Github</a>
+	<a href="https://github.com/claravania">Github</a> <br/>
 	<a href="https://www.linkedin.com/in/claravania/">LinkedIn</a>
   </div>
 </div>
