--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -4,7 +4,7 @@
 
 <div class="row-fluid">
   <div class="span4">
-	<img height="150" width="150" src="/img/pic.jpeg">
+	<img height="150" width="150" src="/img/2019.jpeg">
   </div>
   <div class="span8">
 	<h4>Contact</h4>
