--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -8,9 +8,9 @@
   </div>
   <div class="span8">
 	<h4>Contact</h4>
-	School of Informatics, IF 3.32 <br/>
-	University of Edinburgh <br/>
-	f.lastname(at)ed.ac.uk <br/>
+	Center for Data Science <br/>
+	New York University <br/>
+	f.lastname(at)nyu.edu <br/>
 	<a href="https://github.com/claravania">Github</a> <br/>
 	<a href="https://www.linkedin.com/in/claravania/">LinkedIn</a>
   </div>
