--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -7,12 +7,13 @@
 	<img height="150" width="150" src="/img/2019.jpeg">
   </div>
   <div class="span8">
-	<h4>Contact</h4>
-	Center for Data Science <br/>
+	<a href=https://wp.nyu.edu/ml2/people/>ML^2</a>, Center for Data Science <br/>
 	New York University <br/>
 	f.lastname(at)nyu.edu <br/>
 	<a href="https://github.com/claravania">Github</a> <br/>
 	<a href="https://www.linkedin.com/in/claravania/">LinkedIn</a>
+	<a href="https://scholar.google.com/citations?user=4WvFs_IAAAAJ&hl=en">Google Scholar</a>
+
   </div>
 </div>
 <div class="row-fluid spacer">
