--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -7,13 +7,10 @@
 	<img height="150" width="150" src="/img/2019.jpeg">
   </div>
   <div class="span8">
-	<a href=https://wp.nyu.edu/ml2/people/>ML^2</a>, <a href=https://cds.nyu.edu/>Center for Data Science</a> <br/>
-	New York University <br/>
-	f.lastname (at) nyu.edu <br/>
 	<a href="https://github.com/claravania">Github</a> <br/>
 	<a href="https://www.linkedin.com/in/claravania/">LinkedIn</a> <br/>
-	<a href="https://scholar.google.com/citations?user=4WvFs_IAAAAJ&hl=en">Google Scholar</a>
-
+	<a href="https://scholar.google.com/citations?user=4WvFs_IAAAAJ&hl=en">Google Scholar</a> <br/>
+	vaniclar (at) amazon.co.uk 
   </div>
 </div>
 <div class="row-fluid spacer">
